feat: include timezone field in geolocation responses
